Fix footnote spacing on timeline

--- a/content/_assets/styles/custom.scss
+++ b/content/_assets/styles/custom.scss
@@ -1117,7 +1117,7 @@ tr.year-property, tr.medium-property{
                 margin-top: 2.5rem;
             }
         }
-        .littlefoot__content {
+        .littlefoot__content, .footnote-item {
             p {
                 margin-left: 0;
             }
